--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,20 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-size: cover;
+  background-color: #f2f2f2;
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
+  z-index: 0;
+}
+
+.header_logo {
+  position: absolute;
+  left: 64px;
+  top: 30px;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
