--- a/styles/style.css
+++ b/styles/style.css
@@ -1,52 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
+  position: sticky;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  background-size: cover;
   background-color: #f2f2f2;
 }
 
 .logo {
   width: 228px;
   height: 32px;
-  z-index: 0;
+  z-index: 3;
 }
 
-.header_logo {
+.header__logo {
   position: absolute;
   left: 64px;
   top: 30px;
+  z-index: 3;
 }
 
 .header__title {
   width: 730px;
+  font-size: 102px;
+  font-weight: 600;
+  line-height: 96px;
+  margin-left: 64px;
+  z-index: 3;
 }
 
 .header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
   width: 388px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  z-index: 3;
+}
+
+.link {
+  color: #2f80ed;
 }
 
 .header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom: 0;
   width: 765px;
   height: 608px;
+  z-index: 2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  right: 0;
+  top: 64px;
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
+  z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
