--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,102 @@
   z-index: 1;
 }
 
+.description {
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.two-columns_brief {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  width: 175px;
+}
+
+.two-columns_main-text {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 80%;
+}
+
+.two-columns_main-text:last-child {
+  padding-bottom: 0;
+}
+
+.two-columns_paragraf {
+  padding-bottom: 30px;
+}
+
+.two-columns_span-accent {
+  font-weight: 600;
+}
+
+
+.digits {
+  margin: 100px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section-title {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  width: 60%;
+  margin-bottom: 20px;
+}
+
+.section-subtitle {
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  margin-bottom: 60px;
+}
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1100px;
+  padding-bottom: 100px;
+  margin: 0 auto;
+}
+
+.table_cell {
+  width: 250px;
+  margin-left: 0; /* Отступ слева в браузере IE и Opera */
+  padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+  list-style-type: none;
+}
+
+.table_heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table_text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+
+
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
