--- a/styles/style.css
+++ b/styles/style.css
@@ -182,8 +182,6 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-
-  margin-bottom: 90px;
 }
 
 .feynman_title {
@@ -224,12 +222,115 @@
   z-index: 1;
 }
 
+.kaufman {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 90px;
+  color: white;
+  overflow: hidden;
+  background-color: #1f1f1f;
+}
 
+.section-title_theme_dark {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  width: 60%;
+  margin-bottom: 20px;
+  z-index: 2;
+}
 
-/* и элемента с модификатором вида ключ-значение */
+.section-subtitle_theme_dark {
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  z-index: 2;
+}
+
+.table__theme_dark {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+  padding-bottom: 90px;
+  z-index: 2;
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+  list-style-type: none;
+}
+
+.table__heading_theme_dark {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: 1;
+}
+
+.footer {
+
+}
+
+.footer__columns {
+
+}
+
+.footer__column_content_copyright {
+
+}
+
+.logo__place_footer {
+
+}
+
+.footer__author {
+
+}
+
+.footer__column_content_info {
+
+}
+
+.footer__column-heading {
+
+}
+
+.footer__columnn-links {
+
+}
+
+.footer__columnn-link {
+
+}
+
+.footer__column_content_social {
+
+}
+
+.footer__social-icon {
+
 }
