--- a/styles/style.css
+++ b/styles/style.css
@@ -291,40 +291,73 @@
   z-index: 1;
 }
 
-.footer {
+/*
+ border: solid red;
+*/
 
+.footer {
+  display: flex;
+  min-height: 350px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  color: white;
+  background-color: #1f1f1f;
+  border: solid red;
 }
 
 .footer__columns {
-
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  border: solid red;
 }
 
 .footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
 }
 
 .logo__place_footer {
-
+  position: absolute;
 }
 
 .footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 18px 0;
 
+border: solid red;
 }
 
 .footer__column_content_info {
-
+  border: solid red;
 }
 
 .footer__column-heading {
-
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  padding-bottom: 20px;
+  border: solid red;
 }
 
 .footer__columnn-links {
-
+  list-style-type: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  padding-bottom: 16px;
+  border: solid red;
 }
 
 .footer__columnn-link {
-
+  text-decoration: none;
+  color: white;
 }
 
 .footer__column_content_social {
@@ -332,5 +365,7 @@
 }
 
 .footer__social-icon {
-
+  height: 16px;
+  width: 16px;
+  padding-right: 10px;
 }
