Осталось сбросить отступы

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 }
 
 .header {
-  position: sticky;
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -35,7 +35,10 @@
 }
 
 .header__title {
-  width: 730px;
+  margin: 0;
+  padding: 0;
+  max-width: 730px;
+  width: 100%;
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
@@ -90,12 +93,13 @@
   padding-top: 100px;
 }
 
-.two-columns_brief {
+.two-columns__brief {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
-  width: 175px;
+  max-width: 175px;
+  width: 100%;
 }
 
 .two-columns_main-text {
@@ -105,12 +109,12 @@
   width: 80%;
 }
 
-.two-columns_main-text:last-child {
-  padding-bottom: 0;
+.two-columns_paragraph {
+  padding-bottom: 30px;
 }
 
-.two-columns_paragraf {
-  padding-bottom: 30px;
+.two-columns_paragraph:last-child {
+  padding-bottom: 0;
 }
 
 .two-columns_span-accent {
@@ -150,7 +154,7 @@
   margin: 0 auto;
 }
 
-.table_cell {
+.table__cell {
   margin-top: 60px;
   width: 250px;
   margin-left: 0; /* Отступ слева в браузере IE и Opera */
@@ -158,13 +162,13 @@
   list-style-type: none;
 }
 
-.table_heading {
+.table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
 }
 
-.table_text {
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -178,29 +182,30 @@
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
 }
 
-.feynman_title {
+.feynman__title {
   text-align: center;
   padding-top: 100px;
   padding-bottom: 70px;
-  width: 648px;
+  max-width: 648px;
+  width: 100%;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
   z-index: 2;
 }
 
-.feynman_subtitle {
+.feynman__subtitle {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   z-index: 2;
 }
 
-.feynman_link {
+.feynman__link {
   position: absolute;
   top: 50%;
   right: 48px;
@@ -210,7 +215,7 @@
   color: #2f80ed;
 }
 
-.feynman_pic {
+.feynman__pic {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -226,12 +231,12 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 90px;
-  color: white;
+  color: #ffffff;
   overflow: hidden;
   background-color: #1f1f1f;
 }
 
-.section-title_theme_dark {
+.section-title__theme_dark {
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
@@ -241,7 +246,7 @@
   z-index: 2;
 }
 
-.section-subtitle_theme_dark {
+.section-subtitle__theme_dark {
   text-align: center;
   line-height: 34px;
   font-size: 24px;
@@ -260,7 +265,7 @@
   z-index: 2;
 }
 
-.table__cell_theme_dark {
+.table__cell__theme_dark {
   width: 200px;
   margin-top: 80px;
   list-style-type: none;
@@ -280,17 +285,15 @@
 }
 
 .kaufman__triangle {
+  background: url(../images/kaufman-triangle.svg);
+  background-size: cover;
+  width: 877px;
+  height: 877px;
   position: absolute;
   top: 0;
   right: -210px;
-  width: 877px;
-  height: 877px;
   z-index: 1;
 }
-
-/*
- border: solid red;
-*/
 
 .footer {
   display: flex;
@@ -306,18 +309,12 @@
   margin: 60px auto 40px;
 }
 
-.footer__column_content_copyright {
+.footer__column__content_copyright {
   position: relative;
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-}
-
-.logo__place_footer {
-  position: absolute;
-  left: 0;
-  top: 0;
+  justify-content: space-between;
 }
 
 .footer__author {
