--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,8 @@
   position: absolute;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  max-width: 388px;
+  width: 100%;
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
@@ -101,7 +102,7 @@
   padding: 0;
 }
 
-.two-columns_main-text {
+.two-columns__main-text {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -157,6 +158,7 @@
   justify-content: space-between;
   width: 1100px;
   margin: 0 auto;
+  padding: 0;
 }
 
 .table__cell {
