--- a/styles/style.css
+++ b/styles/style.css
@@ -109,17 +109,17 @@
   width: 80%;
 }
 
-.two-columns_paragraph {
+.two-columns__paragraph {
   margin: 0;
   padding: 0;
   padding-bottom: 30px;
 }
 
-.two-columns_paragraph:last-child {
+.two-columns__paragraph:last-child {
   padding-bottom: 0;
 }
 
-.two-columns_span-accent {
+.two-columns__span-accent {
   font-weight: 600;
 }
 
@@ -264,18 +264,9 @@
   z-index: 2;
 }
 
-.table__cell__theme_dark {
+.table__cell_theme_dark {
   width: 200px;
   margin-top: 80px;
-  list-style-type: none;
-}
-
-.table__heading_theme_dark {
-  margin: 0;
-  padding: 0;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
 }
 
 .kaufman__triangle {
@@ -327,7 +318,7 @@
   padding-bottom: 20px;
 }
 
-.footer__columnn-links {
+.footer__column-links {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -337,7 +328,7 @@
   padding-bottom: 16px;
 }
 
-.footer__columnn-link {
+.footer__column-link {
   text-decoration: none;
   color: white;
 }
