--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,7 @@
   padding: 0;
 }
 
-.two-columns_main-text {
+.two-columns__main-text {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
