--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,18 @@
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+.rotation {
+  animation: rotation 20s linear infinite;
+}
+
+/*-----------Выше новые стили----------*/
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -14,6 +29,7 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
+  overflow: hidden;
 }
 
 .logo {
