--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
   animation: rotation 20s linear infinite;
 }
 
-/*-----------Выше новые стили----------*/
+/*-----------Выше стили для вращения фигур----------*/
 
 .page {
   min-width: 1100px;
@@ -139,6 +139,115 @@
   font-weight: 600;
 }
 
+.techniques {
+
+}
+
+.section-title {
+
+}
+
+.section-subtitle {
+
+}
+
+.cards {
+
+}
+
+.cards__item {
+
+}
+
+.cards__image {
+
+}
+
+.cards__title {
+
+}
+
+.cards__description {
+
+}
+
+.video {
+
+}
+
+.section-title {
+
+}
+
+.section-subtitle {
+
+}
+
+.video__iframes {
+
+}
+
+.video__iframe {
+
+}
+
+.oakley {
+
+}
+/* В блок выше подключены стили из ПР1(ту-колумнс)*/
+
+.feynman {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+  min-height: 890px;
+  background-color: #f2f2f2;
+}
+
+.feynman__title {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 70px;
+  max-width: 648px;
+  width: 100%;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  z-index: 2;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  padding: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.feynman__pic {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 867px;
+  height: 636px;
+  z-index: 1;
+}
+
 .digits {
   display: flex;
   flex-direction: row;
@@ -201,57 +310,44 @@
   margin: 20px 0 0;
 }
 
+.khan {
 
-.feynman {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 100px;
-  min-height: 890px;
-  background-color: #f2f2f2;
 }
 
-.feynman__title {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  padding-top: 100px;
-  padding-bottom: 70px;
-  max-width: 648px;
-  width: 100%;
-  line-height: 1.15;
-  font-size: 120px;
-  font-weight: 600;
-  z-index: 2;
+.khan__container {
+
 }
 
-.feynman__subtitle {
-  margin: 0;
-  padding: 0;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  z-index: 2;
+.khan__author {
+
 }
 
-.feynman__link {
-  position: absolute;
-  top: 50%;
-  right: 48px;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  color: #2f80ed;
+.khan__title {
+
 }
 
-.feynman__pic {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 867px;
-  height: 636px;
-  z-index: 1;
+.khan__quote {
+
+}
+
+.khan__quote-author {
+
+}
+
+.khan__quote-author-subline {
+
+}
+
+.khan__book-container {
+
+}
+
+.khan__book-pic {
+
+}
+
+.khan__buy-link {
+
 }
 
 .kaufman {
@@ -294,6 +390,30 @@
   top: 0;
   right: -210px;
   z-index: 1;
+}
+
+.resources {
+
+}
+
+.section-title {
+
+}
+
+.section-subtitle {
+
+}
+
+.resources__logo-zone {
+
+}
+
+.resources__link {
+
+}
+
+.resources__logo {
+
 }
 
 .footer {
