--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,13 @@
 }
 
 .header__link {
+  text-decoration: none;
   color: #2f80ed;
+}
+
+.header__link:hover {
+  opacity: 0.7;
+  transition: 0.5s ease-in-out;
 }
 
 .header__main-illustration {
@@ -266,7 +272,13 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  text-decoration: none;
   color: #2f80ed;
+}
+
+.feynman__link:hover {
+  opacity: 0.7;
+  transition: 0.5s ease-in-out;
 }
 
 .feynman__pic {
@@ -398,6 +410,7 @@
 .khan__book-container {
   display: flex;
   padding-top: 68px;
+  align-items: flex-start
 }
 
 .khan__book-pic {
@@ -412,7 +425,13 @@
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
+  text-decoration: none;
   color: #2f80ed;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.7;
+  transition: 0.5s ease-in-out;
 }
 
 .kaufman {
@@ -454,30 +473,37 @@
   top: 0;
   right: -210px;
   z-index: 1;
+  transform-origin: 58% 42%;
 }
 
 .resources {
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .section-title {
-
+/*Одинаковы с блоками из других секций*/
 }
 
 .section-subtitle {
-
+/*Одинаковы с блоками из других секций*/
 }
 
 .resources__logo-zone {
-
+  padding-top: 80px;
+  padding-bottom: 217px;
+  width: 1100px;
+  margin: 0 auto 0;
 }
 
 .resources__link {
-
+/*Нет необходимых к применению стилей*/
 }
 
 .resources__logo {
-
+  width: 270px;
+  height: 38px;
 }
 
 .footer {
