--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle {
-  background: url(../images/kaufman-triangle.svg);
+  background: url(/images/kaufman-triangle.svg);
   background-size: cover;
   width: 877px;
   height: 877px;
