На проверку ПР2 №2

--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,7 @@
 .khan__book-pic {
-  width: 608px;
-  height: 620px;
+  object-fit: cover;
+  object-position: top;
+  width: 620px;
+  height: 608px;
   padding-right: 48px;
 }
